--- a/FrontendAngular/src/app/seller-add-product/seller-add-product.component.html
+++ b/FrontendAngular/src/app/seller-add-product/seller-add-product.component.html
@@ -1,55 +1,66 @@
 <div class="add-product">
-    <h1>Add New Product</h1>
-    <p class="message-p">{{addProductMessage}}</p>
-    <form #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)" class="common-form">
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="name"
-        placeholder="Enter Product Name"
-      />
-  
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="price"
-        placeholder="Enter Product Price"
-      />
-  
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="color"
-        placeholder="Enter Product Color"
-      />
-  
-      <input
-        class="form-input"
-        type="text"
-        ngModel
-        name="category"
-        placeholder="Enter Product Category"
-      />
-  
-      <textarea
-        class="form-input"
-        type="text"
-        ngModel
-        name="description"
-        placeholder="Enter Product Description"
-      ></textarea>
-  
-      <input
+  <h1>Add New Product</h1>
+  <p class="message-p">{{ addProductMessage }}</p>
+  <form
+    #addProduct="ngForm"
+    (ngSubmit)="submit(addProduct.value)"
+    class="common-form"
+  >
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="name"
+      placeholder="Enter Product Name"
+    />
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="price"
+      placeholder="Enter Product Price"
+    />
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="color"
+      placeholder="Enter Product Color"
+    />
+
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="category"
+      placeholder="Enter Product Category"
+    />
+
+    <textarea
+      class="form-input"
+      type="text"
+      ngModel
+      name="description"
+      placeholder="Enter Product Description"
+    ></textarea>
+
+    <input
       class="form-input"
       type="text"
       ngModel
       name="imageUrl"
       placeholder="Enter Product ImageUrl"
     />
-  
+    <input
+      class="form-input"
+      type="text"
+      ngModel
+      name="id"
+      placeholder="Enter Product id"
+    />
+
     <button class="form-button">Add Product</button>
-    </form>
-  </div>
+  </form>
+</div>
