--- a/FrontendAngular/src/app/header/header.component.html
+++ b/FrontendAngular/src/app/header/header.component.html
@@ -14,7 +14,16 @@
         <li><a routerLink="seller-auth">Seller</a></li>
         <li><a routerLink="">Home</a></li>
         <li><a routerLink="/user-auth">Login/Signup</a></li>
-        <li><a href="#">Cart(0)</a></li>
+        <li><a href="#">Cart({{cartItems}})</a></li>
+      </ul>
+      <ul *ngSwitchCase="'user'" >
+        <li><a routerLink="seller-auth">Seller</a></li>
+        <li><a routerLink="">Home</a></li>
+        <!-- <li><a>{{userName | titlecase}}</a></li> -->
+        <li><a routerLink="my-orders" >My Orders</a></li>
+        <li><a (click)="userLogout()" >Logout</a></li>
+    
+        <li><a [routerLink]="cartItems>0?'cart-page':null">Cart({{cartItems}})</a></li>
       </ul>
       <ul *ngSwitchCase="'seller'">
         <li><a routerLink="seller-add-product">Add Product</a></li>
