delete product done and app is running good

--- a/FrontendAngular/src/app/home/home.component.html
+++ b/FrontendAngular/src/app/home/home.component.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="product-footer">
-          <a  routerLink="/details/{{itemId}}" (click)="getItem(item)">View Details</a>
+          <a  routerLink="/details/{{item._id}}" (click)=" viewDetails(item)">View Details</a>
           <a href="">Add to Cart</a>
         </div>
       </div>
