cancel order and remove order done

--- a/FrontendAngular/src/app/cart-page/cart-page.component.html
+++ b/FrontendAngular/src/app/cart-page/cart-page.component.html
@@ -18,7 +18,7 @@
           <span>Quantity:5</span>
         </li>
         <li>
-          <button class="form-button">Remove to Cart</button>
+          <button (click)="removeItem(cart._id)" class="form-button">Remove to Cart</button>
         </li>
       </ul>
     </div>
