--- a/FrontendAngular/src/app/header/header.component.html
+++ b/FrontendAngular/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="nav">
     <h1><a routerLink="/">E-Comm</a></h1>
-    <div *ngIf="menuType==='default'" class="nav-search">
+    <div *ngIf="menuType==='default' || menuType==='user'" class="nav-search">
       <input #searchInput type="text" (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="Search Products" />
       <button (click)="submitSearch(searchInput.value)">Search</button>
       <ul class="suggested-search" *ngIf="searchResult">
         <li *ngFor="let item of searchResult">
-          <a (mousedown)="redirectToDetails(item.id)">{{item.name}}</a>
+          <a (mousedown)="redirectToDetails(item._id)">{{item.name}}</a>
         </li>
       </ul>
     </div>
@@ -13,22 +13,22 @@
       <ul *ngSwitchCase="'default'">
         <li><a routerLink="seller-auth">Seller</a></li>
         <li><a routerLink="">Home</a></li>
-        <li><a routerLink="/user-auth">Login/Signup</a></li>
+        <li><a routerLink="/user-auth" *ngIf="!isAuthenticated">Login/Signup</a></li>
         <li><a href="#">Cart({{cartItems}})</a></li>
       </ul>
       <ul *ngSwitchCase="'user'" >
-        <li><a routerLink="seller-auth">Seller</a></li>
+        <!-- <li><a routerLink="seller-auth">Seller</a></li> -->
         <li><a routerLink="">Home</a></li>
-        <!-- <li><a>{{userName | titlecase}}</a></li> -->
+        <li><a class="text-black">{{userName | titlecase}}</a></li>
         <li><a routerLink="my-orders" >My Orders</a></li>
-        <li><a (click)="userLogout()" >Logout</a></li>
+        <li><a (click)="userLogout()" *ngIf="isAuthenticated">Logout</a></li>
     
         <li><a [routerLink]="cartItems>0?'cart-page':null">Cart({{cartItems}})</a></li>
       </ul>
       <ul *ngSwitchCase="'seller'">
         <li><a routerLink="seller-add-product">Add Product</a></li>
         <li><a routerLink="/seller-home">List</a></li>
-        <li><a (click)="logout()">Logout</a></li>
+        <li><a (click)="logout()" *ngIf="isAuthenticated">Logout</a></li>
         <li><a href="#">{{sellerName}}</a></li>
       </ul>
     </div>
