Some ui changing

--- a/FrontendAngular/src/app/app.component.css
+++ b/FrontendAngular/src/app/app.component.css
@@ -19,3 +19,8 @@
 .spacer {
     flex: 1 1 auto;
   }
+  .header{
+    background: radial-gradient(#fff,#ffd6d6);
+  }
+
+  /* ----------------------- */
