--- a/FrontendAngular/src/app/seller-home/seller-home.component.html
+++ b/FrontendAngular/src/app/seller-home/seller-home.component.html
@@ -1,1 +1,30 @@
-<p>seller-home works!</p>
+<div class="cart-page">
+    <h1>Cart page</h1>
+    <div class="row">
+      <div class="col details">
+        <ul *ngFor="let cart of cartData">
+          <li>
+            <img
+              src="../../assets/images/{{cart.imageUrl}}"
+            />
+          </li>
+          <li>
+            <span>{{cart.name}}</span>
+          </li>
+          <li>
+            <span>Price : {{cart.price}}</span>
+          </li>
+          <li>
+            <span>{{cart.color}}</span>
+          </li>
+          <li>
+            <span>{{cart.category}}</span>
+          </li>
+          <li>
+            <span>{{cart.description}}</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
