--- a/FrontendAngular/src/app/home/home.component.css
+++ b/FrontendAngular/src/app/home/home.component.css
@@ -1,42 +1,225 @@
-.product-header-img{
-    object-fit: contain;
-    height: 600px;
-    width: 100%;
+.product-header-img {
+  object-fit: contain;
+  height: 600px;
+  width: 100%;
 }
-.product-list-wrapper{
+.product-list-wrapper {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+.product-item {
+  margin-bottom: 40px;
+  border: 1px solid #ddd;
+  margin-right: 25px;
+}
+.product-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+
+.product-item .product-details {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 15px;
+}
+
+.product-item .name-head {
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.product-item .product-details h6 {
+  text-align: center;
+}
+
+.product-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+/* new css starts: */
+
+.categories {
+  margin: 70px 0;
+}
+.col-3 {
+  flex-basis: 30%;
+  min-width: 250px;
+  margin-bottom: 30px;
+}
+
+.col-3 img {
+  width: 100%;
+}
+
+.small-container {
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25x;
+}
+
+.col-4 {
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+  transition: transform 0.5s;
+}
+.col-4 img {
+  width: 100%;
+}
+
+.title {
+  text-align: center;
+  margin: 0 auto 80px;
+  position: relative;
+  line-height: 60px;
+  color: #555;
+}
+
+.title::after {
+  content: "";
+  background: #ff523b;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+h4 {
+  color: #555;
+  font-weight: normal;
+}
+.col-4 {
+  font-size: 14px;
+}
+.rating fa-icon {
+  color: #ff523b;
+}
+
+.col-4:hover{
+    transform: translateY(-5px);
+}
+/* offer */
+.offer{
     margin-top: 80px;
-    margin-bottom: 80px;
+    padding:30px 0;
 }
-.product-item{
-    margin-bottom: 40px;
-    border: 1px solid #ddd;
-    margin-right: 25px;
-}
-.product-item img{
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
+.col-2 .offer-img{
+    padding: 50px;
 }
 
-.product-item .product-details{
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 15px;
+small{
+    color: #555;
 }
 
-.product-item .name-head{
-    margin: 0;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.product-item .product-details h6{
-    text-align: center;
-}
-
-.product-footer{
+.row {
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .col-2 {
+    flex-basis: 50%;
+    min-width: 300px;
+  }
+  .col-2 img {
+    max-width: 100%;
+    padding: 50px 0;
+  }
+  
+  .col-2 h1 {
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+  }
+  
+
+.btn {
+    display: inline-block;
+    background: #ff523b;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: background 0.5s
+  
+  }
+  .btn:hover{
+    background: #563434;
+  }
+
+  a {
+    text-decoration: none;
+    color: #555;
+  }
+  p {
+    color: #555;
+  }
+  
+/* testimonial section */
+.testimonial{
+    text-align: center;
+}
+.testimonial .col-3{
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
+    cursor: pointer;
+    transition: transform 0.5s;
+}
+
+.testimonial .col-3 img{
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.testimonial .col-3:hover{
+    transform: translateY(-10px);
+}
+
+fa-icon .fa-quote-left{
+    font-size: 34px;
+    color: #ff523b;
+}
+
+.col-3 p{
+    font-size: 12px;
+    margin: 12px 0;
+    color: #777;
+}
+
+.testimonial .col-3 h3{
+    font-weight: 600;
+    color: #555;
+    font-size: 16px;
+}
+
+/* brands css */
+
+.brands{
+    margin: 100px auto;
+}
+
+.col-5{
+    width: 160px;
+}
+.col-5 img{
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(0);
+}
+
+.col-5 img:hover{
+    filter: grayscale(100%);
 }
