--- a/FrontendAngular/src/app/home/home.component.html
+++ b/FrontendAngular/src/app/home/home.component.html
@@ -1,13 +1,7 @@
-<ngb-carousel *ngIf="popularProduct">
+<!-- <ngb-carousel *ngIf="popularProduct">
   <ng-template *ngFor="let item of popularProduct" ngbSlide>
     <div class="picsum-img-wrapper">
       <a routerLink="/details/{{ item._id }}">
-        <!-- <img
-          class="product-header-img"
-          src="{{ item.imageUrl }}"
-          alt="Random first slide"
-        />
-      </a> -->
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top product-header-img">
       </a>
     </div>
@@ -18,15 +12,11 @@
   </ng-template>
 </ngb-carousel>
 
-
-
 <div class="product-list-wrapper">
   <h1>Trendy Product</h1>
   <div class="row">
     <div class="col-sm-4" *ngFor="let item of trendyProducts">
       <div class="card product-item pt-0 " style="width: 18rem">
-        <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top">
-        
         <ul class="list-group list-group-flush product-details">
           <li class="list-group-item"><h6 class="name-head">{{ item.name }}</h6></li>
           <li class="list-group-item product-price"> <h6>Price: {{ item.price }}</h6></li>
@@ -40,10 +30,192 @@
       </div>
     </div>
   </div>
+</div> -->
+
+
+
+<div class="categories">
+  <div class="small-container">
+    <div class="row">
+      <div class="col-2">
+        <h1>
+          Give Your Workout <br />
+          A New Style!
+        </h1>
+        <p>
+          Success isn't always about greatness. It's about consistency.
+          Consistent <br />hard work gains success. Greatness will come.
+        </p>
+        <a href="" class="btn">Explore Now &#8594;</a>
+      </div>
+      <div class="col-2">
+        <img src="../../assets/images/image1.png" />
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+  <!-- featued categories -->
+  <div class="small-container">
+  <div class="row">
+    <div class="col-3">
+      <img src="../../assets/images/category-1.jpg">
+    </div>
+    <div class="col-3">
+      <img src="../../assets/images/category-2.jpg">
+    </div>
+    <div class="col-3">
+      <img src="../../assets/images/category-3.jpg">
+    </div>
+  </div>
+  </div>
+  <!-- featured products -->
+  <div class="small-container">
+    <h2 class="title">Featured Products</h2>
+    <div class="row">
+      <div class="col-4" *ngFor="let item of trendyProducts">
+        <!-- <img src="../../assets/images/product-1.jpg"> -->
+        <img src='../assets/images/{{item.imageUrl}}'>
+        <h5>{{item.name}}</h5>
+        <div class="rating">
+          <fa-icon [icon]="startIcon"></fa-icon>
+          <fa-icon [icon]="startIcon"></fa-icon>
+          <fa-icon [icon]="startIcon"></fa-icon>
+          <fa-icon [icon]="startIcon"></fa-icon>
+        </div>
+        <p >$50.00</p>
+        <h6>
+          <a class="text-primary" routerLink="/details/{{ item._id }}" (click)="viewDetails(item)">View Details</a>
+        </h6>
+      </div>
+
+ 
+
+ 
+
+   
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Offer -->
+  <div class="offer">
+    <div class="small-container">
+      <div class="row">
+        <div class="col-2">
+          <img src="../../assets/images/exclusive.png" class="offer-img">
+        </div>
+        <div class="col-2">
+          <p>Exclusively Avaiable on Redstore</p>
+          <h1>Smart Band 4</h1>
+          <small>The Mi Smart Band 4 features a 39.9% larger(than Mi Band ) AMOLED color full-touch display width
+            adjustable brightness, so everything is clear as can be.
+          </small>
+          <a href="" class="btn">Buy Now &#8594;</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Testimonial section -->
+  <div class="testimonial">
+    <div class="small-container">
+      <div class="row">
+        <div class="col-3">
+          <fa-icon  [icon]="quoteLeft"></fa-icon>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy
+            text ever
+          </p>
+           
+          <div class="rating">
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+          </div>
+          <img src="../../assets/images/user-1.png">
+          <h3>Sean Parker</h3>
+        </div>
+        <div class="col-3">
+          <fa-icon [icon]="quoteLeft"></fa-icon>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy
+            text ever
+          </p>
+          <div class="rating">
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+          </div>
+          <img src="../../assets/images/user-2.png">
+          <h3>Shreshthajit Das</h3>
+        </div>
+
+        <div class="col-3">
+          <fa-icon  [icon]="quoteLeft"></fa-icon>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy
+            text ever
+          </p>
+          <!-- <fa-icon [icon]="quoteRight"></fa-icon> -->
+          <div class="rating">
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+            <fa-icon [icon]="startIcon"></fa-icon>
+          </div>
+          <img src="../../assets/images/user-3.png">
+          <h3>Sean Parker</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- brand section -->
+  <div class="brands">
+    <div class="small-container">
+      <div class="row">
+        <div class="col-5">
+          <img src="../../assets/images/logo-godrej.png">
+        </div>
+        <div class="col-5">
+          <img src="../../assets/images/logo-oppo.png">
+        </div>
+        <div class="col-5">
+          <img src="../../assets/images/logo-coca-cola.png">
+        </div>
+        <div class="col-5">
+          <img src="../../assets/images/logo-paypal.png">
+        </div>
+        <div class="col-5">
+          <img src="../../assets/images/logo-philips.png">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
 
 
 
