--- a/FrontendAngular/src/app/my-orders/my-orders.component.html
+++ b/FrontendAngular/src/app/my-orders/my-orders.component.html
@@ -1,10 +1,10 @@
 <div class="my-orders">
     <h1>My Orders</h1>
     <div class="row">
-        <div class="col-sm-2">
+        <div class="col-sm-1">
             <span>Orders</span>
         </div>
-        <div class="col-sm-2 order-id">
+        <div class="col-sm-3 ">
             <span>Order Id</span>
         </div>
         <div class="col-sm-2 ">
@@ -13,21 +13,22 @@
         <div class="col-sm-2">
             <span>Status</span>
         </div>
+      
     </div>
-    <div class="row order-data" *ngFor="let order of orderData">
-        <div class="col-sm-2">
-            <img class="order-img" src="https://www.clipartmax.com/png/middle/210-2106541_track-my-order-beach-volleyball.png">
+    <div class="row order-data" *ngFor="let order of orderData;let i = index;">
+        <div class="col-sm-1">
+            <h5>{{i+1}}</h5>
         </div>
-        <div class="col-sm-2 order-id">
-            <span>#{{order._id}}</span>
-        </div>
-        <div class="col-sm-2">
-            <span>{{order.totalPrice}}</span>
+        <div class="col-sm-3">
+            <span class="text-secondary mt-4">#{{order._id}}</span>
         </div>
         <div class="col-sm-2">
-            <span>In Progress</span>
+            <span class="mt-5">{{order.totalPrice}}</span>
         </div>
         <div class="col-sm-2">
+            <span class="mt-5">In Progress</span>
+        </div>
+        <div class="col-sm-4">
             <button class="form-button" (click)="cancelOrder(order._id)">Cancel Order</button>
         </div>
     </div>
