--- a/FrontendAngular/src/app/product-details/product-details.component.html
+++ b/FrontendAngular/src/app/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <div class="row product-details" *ngIf="productData">
     <div class="col-sm-6">
-      <img class="product-image" src="{{productData.imageUrl}}" alt="" />
+      <img class="product-image" src="../../assets/images/{{productData.imageUrl}}" alt="" />
     </div>
     <div class="col-sm-6">
       <div class="details">
@@ -12,9 +12,11 @@
         </div>
         <h6>Category : {{ productData.category }}</h6>
         <h6>Description: {{ productData.description }}</h6>
+         
         <button *ngIf="!removeCart" class="form-button" (click)="addToCart()">Add to Cart</button>
         <button *ngIf="removeCart" class="form-button" (click)="removeToCart()">Remove to Cart</button>
-        <button class="form-button">Buy Now</button>
+        <button (click)="buyNow()" class="form-button">Buy Now</button>
+         
         <div class="quantity-group">
           <button (click)="handleQuantity('min')">-</button>
           <input type="text" value="{{productQuantity}}" />
