--- a/FrontendAngular/src/app/seller-auth/seller-auth.component.html
+++ b/FrontendAngular/src/app/seller-auth/seller-auth.component.html
@@ -1,4 +1,4 @@
-<div class="seller-auth">
+<!-- <div class="seller-auth">
     <div *ngIf="!showLogin" class="sign-up">
       <h1>Seller Sign-up</h1>
       <form
@@ -32,7 +32,7 @@
       </form>
     </div>
   
-    <!-- Login Area -->
+  
     <div *ngIf="showLogin" class="login">
       <h1>Seller Login</h1>
       <p class="error-p">{{authError}}</p>
@@ -60,4 +60,44 @@
         <a class="auth-toggle-link" (click)="openSignUp()">Don't have an account? Click to Sign-Up</a>
       </form>
     </div>
+</div> -->
+
+
+
+
+<div class="account-page">
+  <div class="container">
+    <div class="row">
+      <div class="col-2">
+        <img src="../../assets/images/image1.png">
+      </div>
+      <div class="col-2 signin-signup">
+        <h1>Seller</h1>
+        <div class="form-container">
+          <div class="form-btn">
+            <a class="" (click)="openLogin()"><span>Login</span></a>
+            <a class="" (click)="openSignUp()"><span>SignUp</span></a>
+          </div>
+           <div  *ngIf="!showLogin" >
+            <form  #userSignUp="ngForm" (ngSubmit)="signUp(userSignUp.value)">
+              <input type="text" placeholder="Enter User Name" name="name" ngModel/>
+              <input type="text" placeholder="Enter User Email" name="email"  ngModel/>
+              <input type="text" placeholder="Enter User Password" name="password"  ngModel />
+              <button type="submit" class="btn">SignUp</button>
+          <!-- <a class="auth-toggle-link" (click)="openLogin()">Click to Login</a> -->
+            </form>
+           </div>
+
+        <div  *ngIf="showLogin" >
+        <form  #userLogin="ngForm" (ngSubmit)="Login(userLogin.value)">
+          <input type="text" placeholder="Enter User Email" name="email"  ngModel/>
+          <input type="text" placeholder="Enter User Password" name="password"  ngModel />
+          <button type="submit" class="btn">LogIn</button>
+          <!-- <a class="auth-toggle-link" (click)="openLogin()">Click to Login</a> -->
+        </form>
+        </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
