--- a/FrontendAngular/src/styles.css
+++ b/FrontendAngular/src/styles.css
@@ -1,57 +1,103 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    font-family: sans-serif;
-  }
-  .container {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  .common-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin: auto;
-  }
-  .form-input {
-    height: 35px;
-    margin-bottom: 20px;
-    border: 1px solid blueviolet;
-    padding-left: 15px;
-    color: blueviolet;
-  }
-  .form-button {
-    height: 35px;
-    border: 1px solid blueviolet;
-    color: blueviolet;
-    cursor: pointer;
-  }
-  .error-p{
-    color: red;
-  }
-  
-  .message-p{
-    color: green;
-    text-align: center;
-  }
-  
-  .carousel-caption {
-    background-color: #0000007d;
-    border-radius: 10px;
-  }
-  .carousel-control-next-icon, .carousel-control-prev-icon{
-    background-color: black;
-    border-radius: 5px;
-  }
-  
-  .invalid-input{
-    color: red;
-    font-size: 12px;
-    margin-top:-20px
-  }
-  button:disabled{
-    cursor: not-allowed;
-  }
-  .max-width{
+  font-family: sans-serif;
+  background: radial-gradient(#fff, #ffd6d6);
+}
+/* .container {
+  margin-left: 5%;
+  margin-right: 5%;
+} */
+.common-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+/* .form-input {
+  height: 35px;
+  margin-bottom: 20px;
+  border: 1px solid blueviolet;
+  padding-left: 15px;
+  color: blueviolet;
+} */
+.form-input {
+  height: 35px;
+  padding-left: 0;
+  margin-left: 0;
+  color: blueviolet;
+}
+/* .form-button {
+  height: 35px;
+  border: 1px solid blueviolet;
+  color: blueviolet;
+  cursor: pointer;
+} */
+.form-button {
+  /* display: inline-block; */
+  background: blue;
+  color: #fff;
+  border: 1px solid blueviolet;
+  padding: 2px 15px;
+  margin: 10px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
+}
+.error-p {
+  color: red;
+}
+
+.message-p {
+  color: green;
+  text-align: center;
+}
+
+.carousel-caption {
+  background-color: #0000007d;
+  border-radius: 10px;
+}
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  background-color: black;
+  border-radius: 5px;
+}
+
+.invalid-input {
+  color: red;
+  font-size: 12px;
+  margin-top: -20px;
+}
+button:disabled {
+  cursor: not-allowed;
+}
+.max-width {
+  width: 100%;
+}
+
+.menu-icon {
+  width: 28px;
+  margin-left: 20px;
+  display: none;
+}
+/* media query */
+
+@media only screen and (max-width: 800px) {
+  nav ul {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background: #333;
     width: 100%;
   }
-  
+
+  nav ul li {
+    display: block;
+    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+}
